2003-12-10  Mike Kestner  <mkestner@ximian.com>

	* generator/CallbackGen.cs : kill ref_owned generation
	* generator/ClassBase.cs : use simple GetObject w/o ref_owned 
	* generator/ManagedCallString.cs : new class to generate native
	to managed method calls.
	* generator/Method.cs : kill ref_owned generation
	* generator/MethodBody.cs : kill ref_owned generation
	* generator/Property.cs : kill ref_owned generation
	* generator/Signal.cs : generate delegates and vtable connect
	methods for all signals. Mark VMs with new attr.
	* generator/StructBase.cs : kill ref_owned generation
	* glib/DefaultSignalHandlerAttribute.cs : new attr to mark
	virtual methods.
	* glib/Object.cs : add overload for GetObject that defaults
	to ref_owned=false. Add extern for VM override glue.

2003-12-08  Luciano Martorella <mad_lux_it@users.sourceforge.net>

	* gdk/Gdk.metadata : ref/array tags
	* gdk/Colormap.custom : removed
	* gdk/gdk-api.xml : regen

2003-12-08  Mike Kestner  <mkestner@ximian.com>

	* generator/Signal.cs : add virtual method generation for the 
	default signal handlers.
	* glib/Object.cs : add g_signal_chain_from_overridden extern

2003-12-08  Mike Kestner  <mkestner@ximian.com>

	* generator/VMSignature.cs : new class to generate virtual method
	signatures for default signal handlers.

2003-12-08  Mike Kestner  <mkestner@ximian.com>

	* generator/ObjectGen.cs : stupid little whitespace change

2003-12-08  Mike Kestner  <mkestner@ximian.com>

	* glue/type.c : new glue for g_signal_override_class_closure

2003-12-07  Mike Kestner  <mkestner@ximian.com>

	* gnome/Gnome.metadata : About ctor's logo_pixbuf is null_ok
	* gnome/gnome-api.xml : regen

2003-12-04  Mike Kestner  <mkestner@ximian.com>

	* glib/Object.cs : kill unused WrapperClassAttribute. [#51458]

2003-12-04  Mike Kestner  <mkestner@ximian.com>

	* parser/gapi2xml.pl : fix for const param handling [#50295]

2003-12-03  Mike Kestner  <mkestner@speakeasy.net>
