@@ -1,0 +1,21 @@
+		//
+		// Gtk.TextTag.custom - Gtk TextTag class customizations
+		//
+		// Author: Radek Doulik  (rodo@ximian.com)
+		//
+		// Copyright (C) 2002 Ximian, Inc. 
+		//
+		// This code is inserted after the automatically generated code.
+		//
+		
+		public Pango.Weight Weight {
+			get {
+				GLib.Value val = new GLib.Value ();
+				GetProperty ("weight", val);
+				Pango.Weight ret = (Pango.Weight) (int) val;
+				return ret;
+			}
+			set {
+				SetProperty ("weight", new GLib.Value ((int) value));
+			}
+		}
