@@ -7292,7 +7292,7 @@
       <property name="Family" cname="family" type="gchar*" readable="true" writeable="true" />
       <property name="Style" cname="style" type="PangoStyle" readable="true" writeable="true" />
       <property name="Variant" cname="variant" type="PangoVariant" readable="true" writeable="true" />
-      <property name="Weight" cname="weight" readable="true" writeable="true" type="PangoWeight" />
+      <property name="Weight" cname="weight" readable="true" writeable="true" type="PangoWeight" hidden="1" />
       <property name="Stretch" cname="stretch" type="PangoStretch" readable="true" writeable="true" />
       <property name="Size" cname="size" type="gint" readable="true" writeable="true" />
       <property name="Scale" cname="scale" type="gdouble" readable="true" writeable="true" />
