@@ -1,3 +1,14 @@
+2003-12-12  Radek Doulik  <rodo@ximian.com>
+
+	* gtk/Gtk.metadata: hide TextTag.Weight property and implement it
+	in TextTag.custom. TextTag Weight property in gtk is of type int,
+	but we want it to be Pango.Weight enum
+
+2003-12-10  Radek Doulik  <rodo@ximian.com>
+
+	* glue/program.c (get_default): moved check after strspec is set
+	so we don't check uninitialized value
+
 2003-12-10  Mike Kestner  <mkestner@ximian.com>
 
 	* generator/CallbackGen.cs : kill ref_owned generation
